bugfix: review近8个commit挑出的18个问题，含匿名可打崩接口与重置漏清Redis
后端
- offsetOf用int乘法，page传1亿出头溢出成负OFFSET，PG直接报错；列表接口对游客放行，等于匿名GET就能刷500。改long运算+page夹到≥1
- 重置账户漏清Redis：三个游戏"进行中的那局"只存Redis，库表行删了局还活着，回去接着提现能从被抹掉的游戏里拿派彩；今日buff缓存也没清，重置完最长1小时抽不了
- post()不校验replyToUserId，随便填个userId就能给任意人推"XX回复了你"。加existsInThread卡住只能回复这串里说过话的人
- 删评论不清comment_notification，点通知只会看到"评论不存在"且死链永远留在信封里。删根评论时连子评论的一并清
- vote()没查禁言，被禁言者发不了言却能靠点赞刷满别人信封
- 子评论预览查询自己按offset/limit复算分页窗口，两次查询间有人发帖就整体挪一格，末位主楼静默丢预览。改成直接吃上一步查到的rootId列表
- vote的去重Set每次投票都expire，TTL被一直往后推，热门评论永不过期。只在刚建Set时设
- muteUntil超10年归为永久，否则plusDays加出的年份超PG timestamp上限(294276年)写库500
- 限流挪到校验之后，回复一条已删评论失败不再白扣额度
- context()封顶200条，原先给Integer.MAX_VALUE等于不限；同时把childCount对齐到实际条数，否则前端会冒出"加载更多"再把已有的替换成10条
- resetAccount补判空

前端
- "加载更多留言"无禁用无loading，页码又在await后才推进，双击把同一页追加两遍导致key冲突
- expanding是全局单值：A飞行中点B会解禁A的按钮，再点A用同页码重拉→子评论重复→rest变负→按钮消失→剩余回复再也加载不出来
- posting拆成postingRoot/postingReply，原先靠`posting && !replyTo`反推，回复框一开着主发帖框就永远不禁用
- submitReply把刷新从发布的try里摘出来，不再一成功一失败双弹窗骗用户重发
- load()加序号丢弃过期响应，避免卡进"只剩一条评论且没有任何出口"的页面
- 未读数提到共享store，顺带把顶栏信封与我的页复制粘贴的订阅逻辑抽成useNotificationPanel
- reconnectWithIdentity重连前检查还有没有订阅者，登出不再遗留匿名连接

测试 48→83，新增的都对着上面每一条